# ab-toolkit

./: .gitignore  README.md  pyproject.toml
ab_calc/api/: app.py  schemas.py
ab_calc/data/: __init__.py  service.py
ab_calc/design/: __init__.py  sample_size.py
ab_calc/experiments/: __init__.py  models.py  seed.py  service.py  split.py
ab_calc/metrics/: __init__.py  evaluator.py  registry.py
ab_calc/multitest/: __init__.py  corrections.py
ab_calc/ratio/: __init__.py  linearization.py
ab_calc/simulator/: __init__.py  power.py
ab_calc/sources/: __init__.py  engine.py  schema.py
ab_calc/stats/: __init__.py  bayes.py  bootstrap.py  nonparametric.py  parametric.py  result.py  srm.py
ab_calc/variance_reduction/: __init__.py  cuped.py  stratification.py  trimming.py
examples/: quickstart.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: DensitySparkline.tsx  ForestPlot.tsx  Histogram.tsx  Layout.tsx
frontend/src/pages/: DatasourcesPage.tsx  DesignPage.tsx  HomePage.tsx  LaunchPage.tsx  MetricsPage.tsx  ResultsPage.tsx
tests/: test_design.py  test_multitest_ratio_sim.py  test_stats.py  test_variance_reduction.py
