[project]
name = "ab-calc"
version = "0.1.0"
description = "AB testing toolkit: design, analysis, variance reduction, multi-test"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "polars>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "lightgbm>=4.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ab_calc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
